# depscout

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
depscout/: analyst.py  cli.py  config.py  deps.py  enrich.py
tests/: test_analyst.py
