[project]
name = "depscout"
version = "0.1.0"
description = "Upgrade intelligence for your Python dependencies"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "rich>=14.0.0",
    "typer>=0.12.0",
    "httpx>=0.25.0",
    "ollama>=0.6.1",
]

[project.scripts]
depscout = "depscout.cli:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
