[project]
name = "depscout"
version = "0.1.1"
description = "Upgrade intelligence for your Python dependencies"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

authors = [
    { name = "Miguel Soares" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

import-names = ["depscout"]
license-files = ["LICENSE"]

dependencies = [
    "rich>=14.0.0",
    "typer>=0.12.0",
    "httpx>=0.25.0",
    "ollama>=0.6.1",
]

[project.urls]
Homepage = "https://github.com/zemmsoares/depscout"
Issues = "https://github.com/zemmsoares/depscout/issues"

[project.scripts]
depscout = "depscout.cli:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["depscout"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
